// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`multi-stack-app > matches the expected api stack template 1`] = `
{
  "Outputs": {
    "MultiStackAppapiEndpointD0598FD7": {
      "Value": {
        "Fn::Join": [
          "",
          [
            "https://",
            {
              "Ref": "MultiStackAppapiFB7EC5DD",
            },
            ".execute-api.",
            {
              "Ref": "AWS::Region",
            },
            ".",
            {
              "Ref": "AWS::URLSuffix",
            },
            "/",
            {
              "Ref": "MultiStackAppapiDeploymentStageprod995AB209",
            },
            "/",
          ],
        ],
      },
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "MultiStackAppapiAccountDAC4D66F": {
      "DeletionPolicy": "Retain",
      "DependsOn": [
        "MultiStackAppapiFB7EC5DD",
      ],
      "Properties": {
        "CloudWatchRoleArn": {
          "Fn::GetAtt": [
            "MultiStackAppapiCloudWatchRoleA9E9F25F",
            "Arn",
          ],
        },
      },
      "Type": "AWS::ApiGateway::Account",
      "UpdateReplacePolicy": "Retain",
    },
    "MultiStackAppapiCloudWatchRoleA9E9F25F": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "apigateway.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AmazonAPIGatewayPushToCloudWatchLogs",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
      "UpdateReplacePolicy": "Retain",
    },
    "MultiStackAppapiDeploymentA87644C98e09a9ab61a10c6b893cb0a6ef54395d": {
      "DependsOn": [
        "MultiStackAppapiGET2EF1C40F",
      ],
      "Metadata": {
        "aws:cdk:do-not-refactor": true,
      },
      "Properties": {
        "Description": "API in a separate stack from its handler",
        "RestApiId": {
          "Ref": "MultiStackAppapiFB7EC5DD",
        },
      },
      "Type": "AWS::ApiGateway::Deployment",
    },
    "MultiStackAppapiDeploymentStageprod995AB209": {
      "DependsOn": [
        "MultiStackAppapiAccountDAC4D66F",
      ],
      "Properties": {
        "DeploymentId": {
          "Ref": "MultiStackAppapiDeploymentA87644C98e09a9ab61a10c6b893cb0a6ef54395d",
        },
        "RestApiId": {
          "Ref": "MultiStackAppapiFB7EC5DD",
        },
        "StageName": "prod",
      },
      "Type": "AWS::ApiGateway::Stage",
    },
    "MultiStackAppapiFB7EC5DD": {
      "Properties": {
        "Description": "API in a separate stack from its handler",
        "Name": "MultiStackApi",
      },
      "Type": "AWS::ApiGateway::RestApi",
    },
    "MultiStackAppapiGET2EF1C40F": {
      "Properties": {
        "AuthorizationType": "NONE",
        "HttpMethod": "GET",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                {
                  "Fn::ImportValue": "MultiStackServiceStack:ExportsOutputFnGetAttMultiStackApphandler260E0508Arn47C6D6F6",
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Fn::GetAtt": [
            "MultiStackAppapiFB7EC5DD",
            "RootResourceId",
          ],
        },
        "RestApiId": {
          "Ref": "MultiStackAppapiFB7EC5DD",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "MultiStackAppapiGETApiPermissionMultiStackApiStackMultiStackAppapi17C8B329GET9AE8E5CB": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::ImportValue": "MultiStackServiceStack:ExportsOutputFnGetAttMultiStackApphandler260E0508Arn47C6D6F6",
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "MultiStackAppapiFB7EC5DD",
              },
              "/",
              {
                "Ref": "MultiStackAppapiDeploymentStageprod995AB209",
              },
              "/GET/",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "MultiStackAppapiGETApiPermissionTestMultiStackApiStackMultiStackAppapi17C8B329GET23443F49": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::ImportValue": "MultiStackServiceStack:ExportsOutputFnGetAttMultiStackApphandler260E0508Arn47C6D6F6",
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "MultiStackAppapiFB7EC5DD",
              },
              "/test-invoke-stage/GET/",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`multi-stack-app > matches the expected service stack template 1`] = `
{
  "Outputs": {
    "ExportsOutputFnGetAttMultiStackApphandler260E0508Arn47C6D6F6": {
      "Export": {
        "Name": "MultiStackServiceStack:ExportsOutputFnGetAttMultiStackApphandler260E0508Arn47C6D6F6",
      },
      "Value": {
        "Fn::GetAtt": [
          "MultiStackApphandler260E0508",
          "Arn",
        ],
      },
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "MultiStackApphandler260E0508": {
      "DependsOn": [
        "MultiStackApphandlerServiceRoleC2F86FDD",
      ],
      "Properties": {
        "Code": {
          "ZipFile": "exports.handler = async () => ({ statusCode: 200, body: "Hello" })",
        },
        "Description": "Request handler",
        "Handler": "index.handler",
        "Role": {
          "Fn::GetAtt": [
            "MultiStackApphandlerServiceRoleC2F86FDD",
            "Arn",
          ],
        },
        "Runtime": "nodejs22.x",
        "Timeout": 30,
      },
      "Type": "AWS::Lambda::Function",
    },
    "MultiStackApphandlerServiceRoleC2F86FDD": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
